--- a/Application/Admin/View/PoolProviderOrder/info.html
+++ b/Application/Admin/View/PoolProviderOrder/info.html
@@ -38,6 +38,7 @@
                       </if>】</strong></case>
                     <case value="2"><strong class="text-success">已成功，已返回</strong></case>
                   </switch></td></tr>
+            <tr></td>成功链接：</td><td>{$info.success_url}</td></tr>
           <tr><td>通知地址：</td><td><a href="<{$info.pay_notifyurl}>" target="_blank">点击查看</a></td></tr>
           <tr><td>操作人：</td><td></td></tr>
           
