--- a/Application/Admin/View/PoolProviderOrder/info.html
+++ b/Application/Admin/View/PoolProviderOrder/info.html
@@ -131,15 +131,14 @@
   <tr>
     <td>订单状态：</td>
     <td>
-      <switch name="info[pay_status]">
-        <case value="0"><strong class="text-danger">未处理</strong></case>
-        <case value="1"><strong class="text-warning">已成功，未返回 【<if condition="$info['pay_status'] eq 1">
-              <a href="<{:U('Pay/Pay/bufa', ['TransID'=>$info['pay_orderid'],'tongdao'=>$info['pay_ytongdao']])}>"
-                target="_blank">补发通知</a>
-            </if>】</strong></case>
-        <case value="2"><strong class="text-success">已成功，已返回. 已退单</strong></case>
-        <case value="3"><strong class="text-success">已成功，成功已通知超时</strong></case>
-      </switch>
+      <{$info[pay_status]}>
+        <switch name="info[pay_status]">
+          <case value="0"><strong class="text-danger">未处理</strong></case>
+          <case value="1"><strong class="text-warning">已成功，未返回 【<if condition="$info['pay_status'] eq 1">
+                <a href="<{:U('Pay/Pay/bufa', ['TransID'=>$info['pay_orderid'],'tongdao'=>$info['pay_ytongdao']])}>"
+                  target="_blank">补发通知</a>
+              </if>】</strong></case>
+        </switch>
     </td>
   </tr>
   <tr>
