--- a/Application/Admin/View/PoolProviderOrder/info.html
+++ b/Application/Admin/View/PoolProviderOrder/info.html
@@ -138,6 +138,7 @@
                 <a href="<{:U('Pay/Pay/bufa', ['TransID'=>$info['pay_orderid'],'tongdao'=>$info['pay_ytongdao']])}>"
                   target="_blank">补发通知</a>
               </if>】</strong></case>
+          <case value="2"><strong class="text-danger">已成功，已返回</strong></case>
         </switch>
     </td>
   </tr>
