黑名单处理

--- a/Application/Admin/View/Index/main.html
+++ b/Application/Admin/View/Index/main.html
@@ -118,7 +118,17 @@
         </div>
       </div>
     </div>
-    
+    <div class="col-sm-4">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5><{$stat.blacklist}></h5>
+        </div>
+        <div class="ibox-content" style="padding-top:0;height: 67px">
+          <h1 class="no-margins">异常号码<a href="<{:U('PoolPhone/blacklist')}>"> 详情</a></h1>
+          <i class="iconfont icon-shouru" style="color: #eff2fe;"></i>
+        </div>
+      </div>
+    </div>
  
     
 
