--- a/Application/Admin/View/PoolProviderOrder/index.html
+++ b/Application/Admin/View/PoolProviderOrder/index.html
@@ -199,7 +199,7 @@
             , table = layui.table; //表格
         //日期时间范围
         laydate.render({
-            elem: '#createtime'
+            elem: '#create_time'
             , type: 'datetime'
             ,theme: 'molv'
             , range: '|'
