--- a/Application/Pool/View/Account/addLog.html
+++ b/Application/Pool/View/Account/addLog.html
@@ -14,6 +14,10 @@
                     <input type="text" class="layui-input" name="datetime" id="datetime"
                             placeholder="创建起始时间" value="<{$param.datetime}>">
                     </div>
+                    <div class="layui-input-inline">
+                        <input type="text" name="remark" autocomplete="off" placeholder="根据备注查询"
+                               class="layui-input" value="<{$param.remark}>">
+                      </div>
                   
       
                     <div class="layui-input-inline">
