--- a/Application/Admin/View/PoolProvider/addMoneyLog.html
+++ b/Application/Admin/View/PoolProvider/addMoneyLog.html
@@ -15,6 +15,10 @@
                                  class="layui-input" value="<{$param.pid}>">
                                  <input type="hidden" name="status" value="<{$param.status}>" />
                         </div>
+                        <div class="layui-input-inline">
+                            <input type="text" name="remark" autocomplete="off" placeholder="根据备注查询"
+                                   class="layui-input" value="<{$param.remark}>">
+                          </div>
 
                         <div class="layui-input-inline" style="width:300px">
                         <input type="text" class="layui-input" name="datetime" id="datetime"
