--- a/Application/Admin/View/PoolProviderOrder/index.html
+++ b/Application/Admin/View/PoolProviderOrder/index.html
@@ -11,8 +11,12 @@
                     <input type="hidden" name="p" value="1">
                     <div class="layui-form-item">
                         <div class="layui-inline">
+                            <div class="layui-input-inline" >
+                                <input type="text" name="pid" autocomplete="off" placeholder="号码商ID"
+                                    class="layui-input" value="<{$param.pid}>">
+                            </div>
                             <div class="layui-input-inline">
-                                <input type="text" name="pay_memberid" autocomplete="off" placeholder="请输入商户ID"
+                                <input type="text" name="pay_memberid" autocomplete="off" placeholder="商户ID"
                                     class="layui-input" value="<{$param.pay_memberid}>">
                             </div>
                             <div class="layui-input-inline">
