号码商查询完善

--- a/Application/Admin/View/PoolProviderOrder/index.html
+++ b/Application/Admin/View/PoolProviderOrder/index.html
@@ -27,6 +27,10 @@
                                 <input type="text" name="pool_order_id" autocomplete="off" placeholder="请输入商户订单号"
                                     class="layui-input" value="<{$param.pool_order_id}>">
                             </div>
+                            <div class="layui-input-inline">
+                                <input type="text" name="out_trade_id" autocomplete="off" placeholder="请输入号码商订单号"
+                                    class="layui-input" value="<{$param.out_trade_id}>">
+                            </div>
 
                             <div class="layui-input-inline">
                                 <input type="text" name="trade_id" autocomplete="off" placeholder="充值流水号"
