--- a/Application/Admin/View/PoolProvider/add.html
+++ b/Application/Admin/View/PoolProvider/add.html
@@ -34,6 +34,17 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label">转发通道：</label>
+            <div class="layui-input-inline">
+                <select name="transe">
+                    <option value="0">默认通道</option>
+                <foreach name="transe" item="v" key="k">
+                    <option value="<{$v.id}>"><{$v.title}></option>
+                </foreach>
+            </div>
+            </select>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label">状态：</label>
             <div class="layui-col-md12">  
                 <input type="radio" name="status" value="1" title="已认证" checked>
