--- a/Application/Admin/View/PoolProviderOrder/index.html
+++ b/Application/Admin/View/PoolProviderOrder/index.html
@@ -144,6 +144,9 @@
                                         <{$v.order_id}>
                                     </td>
                                     <td>
+                                            <if condition="$v.trade_id ==''">
+                                                    <{$v.pool_trans_id}>
+                                                </if>
                                         <{$v.trade_id}>
                                     </td>
                                     <td>
@@ -171,13 +174,22 @@
                                         <{$v.pay_name}>
                                     </td>
                                     <td>
+                                        <if condition="!$v.pay_applydate">
+                                            <{$v.pool_order_time|date='Y-m-d H:i:s',###}>
+                                        </if>
                                         <{$v.pay_applydate|date='Y-m-d H:i:s',###}>
                                     </td>
 
                                     <td>
+                                            <if condition="!$v.pay_successdate">
+                                                <{$v.pool_finish_time|date='Y-m-d H:i:s',###}>
+                                            </if>
                                         <{$v.pay_successdate|date='Y-m-d H:i:s',###}>
                                     </td>
                                     <td>
+                                            <if condition="!$v.success_url">
+                                                    <{$v.pool_notify_url}>
+                                                </if>
                                         <{$v.success_url}>
                                     </td>
                                     <td>
